# klh10

./: .cirrus.yml  .gitignore  .travis.yml  LICENSE  Makefile  README  README.md  READaux  autogen.sh  configure  configure.ac  ksim.c  tuntap.patch
.github/workflows/: build.yml
bld/: MAKE-ALL
bld/lnx86/: 00build  Makefile
bld/nbaxp/: Makefile
contrib/: README
contrib/backwr/: Makefile  backup.h  backwr.c  sysdep.c  sysdep.h
contrib/read20/: Makefile  dump.h  read20.c
contrib/supdup/: COPYING  INFO  Makefile  sd.tc  supdup  supdup-login.c  supdup.c  supdup.h  supdup.mss  supdupd.c  termcap.h  termcaps.h  terminfo.text  tsd.tc
doc/: Intro.txt  backgrnd.txt  bugs.txt  cmdref.txt  cmdsum.txt  coding.txt  dfkfb.txt  dvhost.txt  history.txt  install.txt  kldiff.txt  klt10.txt  klt20.txt  ksits.txt  kst10.txt  kst20.txt  news.txt  usage.txt  utils.txt
install-guides/: Pi-Mac-install-guide.md
mk/: bld.mk  top-kl.mk  top-ks-its.mk  top-ks.mk  top.mk
old/bld/: MAKE-ALL
old/bld/fbppc/: Makefile
old/bld/fbx86/: Makefile
old/bld/lnaxp/: Makefile
old/bld/lnx86/: 00build
old/bld/lnxarm/: Makefile
old/bld/lnxppc/: Makefile
old/bld/nbaxp/: 00build
old/bld/nbx86/: 00build  Makefile
old/bld/osfaxp/: Makefile
old/bld/solsparc/: 00build  Makefile
old/src/: Mk-fbx86.mk  Mk-lnaxp.mk  Mk-lnxarm.mk  Mk-nbaxp.mk  Mk-nxt.mk  Mk-solsparc.mk
run/dfkfb/: README  dfkfb  dfkfb-all.savh  dfkfb.ini
run/klnic/: README  boot-nic.sav  dist-klnic.ini  dist51-klnic.ini  klh10.ini  mtboot-nic.sav
run/klt10/: README  klt10.ini  twonky.ini
run/klt20/: README  boot.sav  inst-klt20.ini  klt20.ini  mtboot.sav
run/ksits/: @.its-647kn-u  @.its-647md-u  @.its-647pi-u  README  itsbin.647kn-u  itsbin.647md-u  itsbin.647pi-u  klh10-kn.ini  klh10-md.ini  klh10-pi.ini  setvt100  setvt52
run/ksits/pubits/adm/: hosts.its  its.ipfw  rc.firewall-its  router.notes
run/ksits/pubits/doc/: bootload.files  distrib.its  dumpsys.help
run/kst10/: README
run/kst20/: README  inst-kst20.ini  kst20.ini  smboot-k.sav  smmtbt-k.sav
src/: Makefile.mk  Makefile.mk.old  Mk-fbppc.mk  Mk-fbx86.mk  Mk-lnaxp.mk  Mk-lnx86.mk  Mk-lnx86.mk.old  Mk-lnxarm.mk  Mk-lnxppc.mk  Mk-nbaxp.mk  Mk-nbx86.mk  Mk-osfaxp.mk  Mk-solsparc-cc.mk  Mk-solsparc.mk  cenv.h  cmdline.h  config.h.in  dpchaos.c  dpchudp.c  dpchudp.h  dpimp.c  dpimp.h  dpni20.c  dpni20.h  dprpxx.c  dprpxx.h  dpsup.c  dpsup.h  dptm03.c  dptm03.h  dvch11.c  dvch11.h  dvch11.txt  dvcty.c  dvcty.h  dvdte.c  dvdte.h  dvdz11.c  dvdz11.h  dvhost.c  (+83 more)
src/ksim/: .gitignore  Makefile  README.md  ksim.c  ksim.h  main.c
